[package]
name = "human-hash-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
human-hash = { git = "https://github.com/jamesmunns/human-hash-rs.git" }
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
